--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/bauhaus/settings.py
 *.pyc
 *~
 __pycache__
@@ -10,5 +11,4 @@ package.json
 /node_modules
 .idea
 *.iml
-bauhaus/settings.py
 runserver.sh
